pos-frontend-engineering/03-container-development-orchestration/examples/kubernetes/headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: exemplo-stateful
  namespace: estudo-containers
spec:
  clusterIP: None
  selector:
    app: exemplo-stateful
  ports:
    - name: http
      port: 80
      targetPort: 8080
