pos-frontend-engineering/03-container-development-orchestration/examples/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: estudo-containers
spec:
  type: ClusterIP
  selector:
    app: web
  ports:
    - name: http
      port: 80
      targetPort: http
