pos-frontend-engineering/03-container-development-orchestration/examples/kubernetes/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: permitir-apenas-mesmo-namespace
  namespace: estudo-containers
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector: {}
